start of export feature

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <title>Character Generator</title>
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -49,7 +49,8 @@
 
               <div class="row my-2">
                 <div class="col">
-                  <button type="button" class="btn btn-block btn-primary btn-sm" id="generate-ability-array">Generate abilities and traits</button>
+                  <button type="button" class="btn btn-block btn-primary btn-sm" id="generate-ability-array">Generate
+                    abilities and traits</button>
                   <button type="button" class="btn btn-block btn-primary btn-sm" id="dice-generate">Roll 4d6, keep
                     highest 3</button>
                   <button type="button" class="btn btn-block btn-primary btn-sm" id="reset-7">Reset</button>
@@ -86,7 +87,7 @@
 
               <div class="row">
                 <div class="col" id="ability-table">
-                  
+
                 </div>
               </div>
 
@@ -110,6 +111,22 @@
                     new traits</button>
                   <div class="output mt-2">
                     loading...
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="export">
+          <h2>
+            Export character
+          </h2>
+          <div>
+            <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    test
                   </div>
                 </div>
               </div>
@@ -184,7 +201,6 @@
               <label class="form-check-label" for="simple-presentation">Simple presentation</label>
             </div>
 
-
             <div class="output">
               <p>Press the Generate button</p>
             </div>
@@ -195,17 +211,16 @@
       </div>
     </div>
   </main>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+  </script>
   <script src="js/common.js"></script>
   <script src="js/generateAbilityTable.js"></script>
   <script src="js/abilityScoreGenerator.js"></script>
   <script src="js/traitGenerator.js"></script>
   <script src="js/spellbookGenerator.js"></script>
-
-
 </body>
 
 </html>
